# matrix-math-rs

./: .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs  prelude.rs  types.rs
src/enums/: mod.rs
src/structs/: mod.rs
src/utils/: mod.rs
